new branch dOrg with all the changes to date (#289)
Co-authored-by: Ryan <rdturner40@gmail.com>
Co-authored-by: Niraj Kamdar <nirajkamdar27@pm.me>
Co-authored-by: Lawrence Wang <l@lw.io>
Co-authored-by: Niraj Kamdar <51387861+Niraj-Kamdar@users.noreply.github.com>
Co-authored-by: Ryan <51964638+Too-Far@users.noreply.github.com>
Co-authored-by: Alex Warren <exrhizo@gmail.com>

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,10 +28,8 @@ jobs:
           key: hardhatNodeModules-${{ runner.os }}-${{ hashFiles('**/hardhat/yarn.lock') }}
 
       - run: yarn --frozen-lockfile
+      - run: ./scripts/setup-hardhat.sh
       - run: yarn typecheck
       - run: yarn lint:check
       - run: yarn prettier:check
-      - run: git submodule update --init --recursive
-      - run: yarn hardhat:install --frozen-lockfile
-      - run: yarn hardhat:build
       - run: yarn test:ci
