--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "hardhat:install": "yarn --cwd hardhat install",
     "hardhat:test": "yarn --cwd hardhat test",
     "test": "craco test",
-    "test:ci": "CI=1 craco test && yarn hardhat:test",
+    "test:ci": "CI=1 craco test --coverage && yarn hardhat:test",
     "eject": "craco eject",
     "format:staged": "lint-staged",
     "lint": "eslint",
@@ -152,5 +152,16 @@
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
     "util": "0.12.4"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text-summary"
+    ]
   }
 }
