--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "@types/recoilize": "0.8.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
+    "@vercel/node": "^1.12.1",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
