--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -9,7 +9,7 @@
     "codegen": "ts-node scripts/generate-deployment-info.ts",
     "dev": "DEBUG=coordinape:setup hardhat node",
     "deploy": "hardhat deploy --network localhost",
-    "test": "hardhat test"
+    "test": "TEST=1 hardhat test"
   },
   "files": [
     "dist"
