Add relationships , permissions, superadmin role
1. added superadmin role for profiles with admin_view to query all data.
2. added missing relationships for nominees/vouches
3. update column read permissions for 7 current tracked tables
3. added update permission for profile to allow only own self to update data

--- a/hasura/metadata/databases/staging/tables/public_circles.yaml
+++ b/hasura/metadata/databases/staging/tables/public_circles.yaml
@@ -22,12 +22,73 @@ array_relationships:
 select_permissions:
 - permission:
     columns:
+    - alloc_text
+    - auto_opt_out
+    - created_at
+    - default_opt_in
+    - discord_webhook
     - id
+    - is_verified
     - logo
+    - min_vouches
     - name
+    - nomination_days_limit
+    - only_giver_vouch
+    - protocol_id
+    - team_sel_text
+    - team_selection
+    - telegram_id
+    - token_name
+    - updated_at
+    - vouching
+    - vouching_text
+    filter: {}
+  role: superadmin
+- permission:
+    columns:
+    - alloc_text
+    - auto_opt_out
+    - created_at
+    - default_opt_in
+    - id
+    - is_verified
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - only_giver_vouch
+    - protocol_id
+    - team_sel_text
+    - team_selection
+    - token_name
+    - updated_at
+    - vouching
+    - vouching_text
     filter:
       users:
         profile:
           id:
             _eq: X-Hasura-User-Id
+  role: user
+update_permissions:
+- permission:
+    check: null
+    columns:
+    - alloc_text
+    - auto_opt_out
+    - default_opt_in
+    - discord_webhook
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - only_giver_vouch
+    - team_sel_text
+    - team_selection
+    - token_name
+    - vouching
+    - vouching_text
+    filter:
+      id:
+        _in: X-Hasura-Admin-Circle-Ids
   role: user
