--- a/hasura/metadata/databases/staging/tables/public_profiles.yaml
+++ b/hasura/metadata/databases/staging/tables/public_profiles.yaml
@@ -14,6 +14,56 @@ array_relationships:
 select_permissions:
 - permission:
     columns:
+    - id
+    - avatar
+    - background
+    - skills
+    - bio
+    - telegram_username
+    - discord_username
+    - twitter_username
+    - github_username
+    - medium_username
+    - website
+    - address
+    - created_at
+    - updated_at
+    - admin_view
+    - ann_power
+    - chat_id
+    filter: {}
+  role: superadmin
+- permission:
+    columns:
+    - address
+    - admin_view
+    - avatar
+    - background
+    - bio
+    - created_at
+    - discord_username
+    - github_username
+    - id
+    - medium_username
+    - skills
+    - telegram_username
+    - twitter_username
+    - updated_at
+    - website
+    filter:
+      users:
+        circle:
+          organization:
+            circles:
+              users:
+                profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+  role: user
+update_permissions:
+- permission:
+    check: null
+    columns:
     - avatar
     - background
     - bio
@@ -25,12 +75,6 @@ select_permissions:
     - twitter_username
     - website
     filter:
-      users:
-        circle:
-          organization:
-            circles:
-              users:
-                profile:
-                  id:
-                    _eq: X-Hasura-User-Id
+      id:
+        _eq: X-Hasura-User-Id
   role: user
