--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
       HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
       ## uncomment below once local auth hook is setup with Vercel
-      # HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:3000/api/hasuraAuthWebhook
+      HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:3000/api/hasura/auth
       HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
-      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
+      ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
 
 volumes:
   db_data:
