--- a/hasura/metadata/databases/staging/tables/public_epoches.yaml
+++ b/hasura/metadata/databases/staging/tables/public_epoches.yaml
@@ -11,3 +11,48 @@ object_relationships:
       remote_table:
         name: circles
         schema: public
+select_permissions:
+- permission:
+    columns:
+    - id
+    - number
+    - start_date
+    - end_date
+    - circle_id
+    - created_at
+    - updated_at
+    - ended
+    - notified_start
+    - notified_before_end
+    - notified_end
+    - grant
+    - regift_days
+    - days
+    - repeat
+    - repeat_day_of_month
+    filter: {}
+  role: superadmin
+- permission:
+    columns:
+    - circle_id
+    - created_at
+    - days
+    - end_date
+    - ended
+    - grant
+    - id
+    - notified_before_end
+    - notified_end
+    - notified_start
+    - number
+    - repeat
+    - repeat_day_of_month
+    - start_date
+    - updated_at
+    filter:
+      circle:
+        users:
+          profile:
+            id:
+              _eq: X-Hasura-User-Id
+  role: user
