--- a/hasura/metadata/databases/staging/tables/public_nominees.yaml
+++ b/hasura/metadata/databases/staging/tables/public_nominees.yaml
@@ -1,6 +1,34 @@
 table:
   name: nominees
   schema: public
+object_relationships:
+- name: circle
+  using:
+    manual_configuration:
+      column_mapping:
+        circle_id: id
+      insertion_order: null
+      remote_table:
+        name: circles
+        schema: public
+- name: nominator
+  using:
+    manual_configuration:
+      column_mapping:
+        nominated_by_user_id: id
+      insertion_order: null
+      remote_table:
+        name: users
+        schema: public
+- name: user
+  using:
+    manual_configuration:
+      column_mapping:
+        user_id: id
+      insertion_order: null
+      remote_table:
+        name: users
+        schema: public
 array_relationships:
 - name: nominations
   using:
@@ -11,3 +39,43 @@ array_relationships:
       remote_table:
         name: vouches
         schema: public
+select_permissions:
+- permission:
+    columns:
+    - id
+    - name
+    - address
+    - nominated_by_user_id
+    - circle_id
+    - description
+    - nominated_date
+    - expiry_date
+    - vouches_required
+    - user_id
+    - ended
+    - created_at
+    - updated_at
+    filter: {}
+  role: superadmin
+- permission:
+    columns:
+    - address
+    - circle_id
+    - created_at
+    - description
+    - ended
+    - expiry_date
+    - id
+    - name
+    - nominated_by_user_id
+    - nominated_date
+    - updated_at
+    - user_id
+    - vouches_required
+    filter:
+      circle:
+        users:
+          profile:
+            id:
+              _eq: X-Hasura-User-Id
+  role: user
