--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "prettier:check": "yarn prettier --check",
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "lint-staged": {
     "{api,src}/**/*.{js,ts,tsx}": [
@@ -97,6 +99,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -117,6 +129,14 @@
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
     "@gqty/cli": "^2.3.1",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
+    "@storybook/node-logger": "^6.4.9",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.4.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
@@ -156,7 +176,8 @@
     "stream-browserify": "3.0.0",
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
-    "util": "0.12.4"
+    "util": "0.12.4",
+    "webpack": "5"
   },
   "jest": {
     "collectCoverageFrom": [
