--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
     "@sentry/tracing": "6.14.1",
+    "@stitches/react": "^1.2.6",
     "@web3-react/core": "6.1.9",
     "@web3-react/fortmatic-connector": "6.1.6",
     "@web3-react/injected-connector": "6.0.7",
