--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@coordinape/hardhat": "file:./hardhat",
-    "@craco/craco": "6.3.0",
+    "@craco/craco": "^6.4.3",
     "@date-io/luxon": "1.x",
     "@gqty/react": "^2.1.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
@@ -80,8 +80,8 @@
     "prettier:fix": "yarn prettier --write",
     "typecheck": "tsc --noEmit",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "{api,src}/**/*.{js,ts,tsx}": [
@@ -173,6 +173,7 @@
     "prisma": "3.4.2",
     "react-scripts": "5.0.0-next.47",
     "source-map-explorer": "2.5.2",
+    "storybook-preset-craco": "^0.0.6",
     "stream-browserify": "3.0.0",
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
