--- a/package.json
+++ b/package.json
@@ -160,7 +160,8 @@
     "stream-browserify": "3.0.0",
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
-    "util": "0.12.4"
+    "util": "0.12.4",
+    "webpack": "5.65.0"
   },
   "jest": {
     "collectCoverageFrom": [
