--- a/hasura/metadata/databases/staging/tables/tables.yaml
+++ b/hasura/metadata/databases/staging/tables/tables.yaml
@@ -1,7 +1,17 @@
+- "!include public_burns.yaml"
+- "!include public_circle_metadata.yaml"
+- "!include public_circle_private.yaml"
 - "!include public_circles.yaml"
 - "!include public_epoches.yaml"
+- "!include public_gift_private.yaml"
+- "!include public_histories.yaml"
 - "!include public_nominees.yaml"
+- "!include public_pending_gift_private.yaml"
+- "!include public_pending_token_gifts.yaml"
+- "!include public_personal_access_tokens.yaml"
 - "!include public_profiles.yaml"
 - "!include public_protocols.yaml"
+- "!include public_teammates.yaml"
+- "!include public_token_gifts.yaml"
 - "!include public_users.yaml"
 - "!include public_vouches.yaml"
