--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,7 +7,7 @@
     "compile": "hardhat clean && hardhat compile",
     "build": "tsc && ./scripts/cp-declarations.sh",
     "codegen": "ts-node scripts/generate-deployment-info.ts",
-    "ganache": "ganache-cli --networkId 1576478390085 --db ./data --deterministic --hostname=0.0.0.0 -m coordinape",
+    "ganache": "export $(xargs <../.env) && ganache-cli --networkId 1576478390085 --db ./data --deterministic --hostname=0.0.0.0 -m coordinape --unlock $ADMIN_ADDRESS",
     "dev": "DEBUG=coordinape:setup hardhat node",
     "deploy": "hardhat deploy --network localhost",
     "test": "TEST=1 hardhat test"
