refactor: improve mock yVault deploy scripts and pin deps

--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,34 +7,34 @@
     "compile": "hardhat clean && hardhat compile",
     "build": "tsc && ./scripts/cp-declarations.sh",
     "codegen": "ts-node scripts/generate-deployment-info.ts",
-    "ganache": "export $(xargs <../.env) && ganache-cli --networkId 1576478390085 --db ./data --deterministic --hostname=0.0.0.0 -m coordinape --unlock $ADMIN_ADDRESS",
+    "ganache": "export $(xargs <../.env) && ganache-cli --networkId 1576478390085 --db ./data --deterministic --hostname=0.0.0.0 -m coordinape --unlock $HH_OWNER_ADDRESS",
     "dev": "DEBUG=coordinape:setup hardhat node",
-    "deploy": "hardhat deploy --network localhost",
+    "deploy": "hardhat deploy --network ganache",
     "test": "TEST=1 hardhat test"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-ganache": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.1",
-    "@typechain/ethers-v5": "^7.0.0",
-    "@typechain/hardhat": "^2.0.0",
-    "@types/chai": "^4.2.22",
-    "@types/debug": "^4.1.7",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^15.0.3",
-    "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.4.6",
-    "ganache-cli": "^6.12.2",
-    "hardhat": "^2.4.1",
-    "hardhat-deploy": "^0.9.0",
-    "ts-node": "^9.1.1",
-    "typechain": "^5.0.0",
-    "typescript": "^4.2.4"
+    "@nomiclabs/hardhat-ethers": "2.0.2",
+    "@nomiclabs/hardhat-ganache": "2.0.1",
+    "@nomiclabs/hardhat-waffle": "2.0.1",
+    "@openzeppelin/contracts": "4.4.1",
+    "@typechain/ethers-v5": "7.0.0",
+    "@typechain/hardhat": "2.0.0",
+    "@types/chai": "4.2.22",
+    "@types/debug": "4.1.7",
+    "@types/mocha": "9.0.0",
+    "@types/node": "15.0.3",
+    "chai": "4.3.4",
+    "dotenv": "10.0.0",
+    "ethereum-waffle": "3.4.0",
+    "ethers": "5.4.6",
+    "ganache-cli": "6.12.2",
+    "hardhat": "2.4.1",
+    "hardhat-deploy": "0.9.0",
+    "ts-node": "9.1.1",
+    "typechain": "5.0.0",
+    "typescript": "4.4.3"
   }
 }
