--- a/hasura/metadata/databases/staging/tables/public_pending_token_gifts.yaml
+++ b/hasura/metadata/databases/staging/tables/public_pending_token_gifts.yaml
@@ -14,20 +14,11 @@ object_relationships:
       remote_table:
         name: epoches
         schema: public
-- name: private_received
+- name: gift_private
   using:
     manual_configuration:
       column_mapping:
-        recipient_id: recipient_id
-      insertion_order: null
-      remote_table:
-        name: pending_gift_private
-        schema: public
-- name: private_sent
-  using:
-    manual_configuration:
-      column_mapping:
-        sender_id: sender_id
+        id: gift_id
       insertion_order: null
       remote_table:
         name: pending_gift_private
