--- a/hasura/metadata/databases/staging/tables/public_pending_gift_private.yaml
+++ b/hasura/metadata/databases/staging/tables/public_pending_gift_private.yaml
@@ -1,23 +1,48 @@
 table:
   name: pending_gift_private
   schema: public
+object_relationships:
+- name: recipient
+  using:
+    manual_configuration:
+      column_mapping:
+        recipient_id: id
+      insertion_order: null
+      remote_table:
+        name: users
+        schema: public
+- name: sender
+  using:
+    manual_configuration:
+      column_mapping:
+        sender_id: id
+      insertion_order: null
+      remote_table:
+        name: users
+        schema: public
 select_permissions:
 - permission:
     columns:
+    - gift_id
+    - note
     - recipient_id
     - sender_id
-    - note
     filter: {}
   role: superadmin
 - permission:
     columns:
+    - gift_id
+    - note
     - recipient_id
     - sender_id
-    - note
     filter:
       _or:
-      - recipient_id:
-          _in: X-Hasura-Circle-User-Ids
-      - sender_id:
-          _in: X-Hasura-Circle-User-Ids
+      - sender:
+          profile:
+            id:
+              _eq: X-Hasura-User-Id
+      - recipient:
+          profile:
+            id:
+              _eq: X-Hasura-User-Id
   role: user
