--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,8 @@ hardhat/data/
 # misc
 .DS_Store
 .env
-.env.local
-.env.development.local
-.env.staging.local
-.env.test.local
-.env.production.local
+.env.*
+!.env.example
 
 npm-debug.log*
 yarn-debug.log*
