WIP seed w graphql

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,18 @@
+
+##### TODO: Organize these
+# Local Docker Compose
+REACT_APP_API_BASE_URL=http://localhost:9000/api
+REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
+REACT_APP_HASURA_ADMIN_SECRET=admin-secret
+DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
+# Used for seed DB script
+LOCAL_WEB_SERVER=http://localhost:3000
+LOCAL_WALLET_ADDRESS=0x0dc053c330918c3c4cb556922973ab21F567919b
+# Hasura vars
+HASURA_ADMIN_SECRET=admin-secret
+HASURA_URL=http://localhost:8080/v1/graphql
+# HASURA_GRAPHQL_AUTH_HOOK is Set in docker-compose
+
 REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
 REACT_APP_INFURA_PROJECT_ID=
 
@@ -6,9 +21,6 @@ REACT_APP_INFURA_PROJECT_ID=
 
 # staging backend
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
-
-# localhost backend
-REACT_APP_API_BASE_URL=http://localhost/api
 
 # for Hardhat
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/YOUR_KEY
