--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -3,6 +3,7 @@
 - "!include public_circle_private.yaml"
 - "!include public_circles.yaml"
 - "!include public_epoches.yaml"
+- "!include public_feedbacks.yaml"
 - "!include public_gift_private.yaml"
 - "!include public_histories.yaml"
 - "!include public_nominees.yaml"
