--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "compile": "hardhat clean && hardhat compile",
     "build": "tsc && ./scripts/cp-declarations.sh",
+    "build:clean": "rm -rf ./{artifacts,cache,typechain,dist,deployments,data}",
     "codegen": "ts-node scripts/generate-deployment-info.ts",
     "dev": "export $(xargs <../.env) && hardhat node",
     "deploy": "DEBUG=coordinape:setup hardhat deploy --network ganache",
