--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "dependencies": {
     "@craco/craco": "6.3.0",
-    "@date-io/luxon": "1.x",
-    "@gqty/react": "^2.1.0",
+    "@date-io/luxon": "1.3.13",
+    "@gqty/react": "2.1.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
@@ -19,7 +19,7 @@
     "@sentry/integrations": "6.14.1",
     "@sentry/react": "6.14.1",
     "@sentry/tracing": "6.14.1",
-    "@stitches/react": "^1.2.6",
+    "@stitches/react": "1.2.6",
     "@web3-react/core": "6.1.9",
     "@web3-react/fortmatic-connector": "6.1.6",
     "@web3-react/injected-connector": "6.0.7",
@@ -31,8 +31,8 @@
     "d3-force-3d": "2.3.2",
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
-    "gqty": "^2.1.0",
-    "graphql": "^16.0.1",
+    "gqty": "2.1.0",
+    "graphql": "16.0.1",
     "history": "5.0.0",
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
@@ -49,7 +49,7 @@
     "recoil": "0.4.1",
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
-    "true-myth": "^4.1.1",
+    "true-myth": "4.1.1",
     "web-vitals": "1.1.0",
     "zod": "3.7.1"
   },
@@ -120,7 +120,7 @@
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
-    "@gqty/cli": "^2.3.1",
+    "@gqty/cli": "2.3.1",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
@@ -136,7 +136,7 @@
     "@types/recoilize": "0.8.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
-    "@vercel/node": "^1.12.1",
+    "@vercel/node": "1.12.1",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
