--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gqty": "2.1.0",
     "graphql": "16.2.0",
     "graphql-zeus": "4.0.4",
+    "graphql-request": "3.7.0",
     "history": "5.0.0",
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
@@ -55,6 +56,7 @@
     "source-map-explorer": "2.5.2",
     "styled-components": "5.2.3",
     "true-myth": "4.1.1",
+    "validatorjs": "3.22.1",
     "web-vitals": "1.1.0",
     "zod": "3.7.1"
   },
