--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
 HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
 REACT_APP_INFURA_PROJECT_ID=infuraidhere
 ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
+COORDINAPE_USER_ADDRESS=0xfad763da9051953fea58c2304395719a3b6ba361
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
