--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: ${LOCAL_HASURA_ADMIN_SECRET}
       HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/auth
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
+      HASURA_ACTION_BASE_URL: http://host.docker.internal:3000/api/hasura/actions
 
   app:
     build:
