Rename Hasura DB from staging to default

--- a/hasura/metadata/databases/databases.yaml
+++ b/hasura/metadata/databases/databases.yaml
@@ -1,9 +1,9 @@
-- name: staging
+- name: default
   kind: postgres
   configuration:
     connection_info:
       database_url:
-        from_env: PG_DATABASE_URL
+        from_env: HASURA_GRAPHQL_DATABASE_URL
       isolation_level: read-committed
       use_prepared_statements: false
-  tables: "!include staging/tables/tables.yaml"
+  tables: '!include default/tables/tables.yaml'
