--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "=14"
   },
   "dependencies": {
+    "@apollo/client": "3.5.7",
     "@craco/craco": "6.3.0",
     "@date-io/luxon": "1.3.13",
     "@gqty/react": "2.1.0",
@@ -31,18 +32,22 @@
     "d3-force-3d": "2.3.2",
     "ethereumjs-util": "7.1.3",
     "ethers": "5.5.1",
+    "faker": "5.5.3",
     "gqty": "2.1.0",
-    "graphql": "16.0.1",
+    "graphql": "16.2.0",
+    "graphql-zeus": "4.0.4",
     "history": "5.0.0",
     "itiriri": "2.0.1",
     "lodash": "4.17.21",
     "logdown": "3.3.1",
     "luxon": "2.0.2",
+    "node-fetch": "2.6.1",
     "notistack": "1.0.10",
     "polished": "4.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-force-graph-2d": "1.23.8",
+    "react-query": "3.34.8",
     "react-router-dom": "5.2.0",
     "react-string-replace": "0.4.4",
     "react-virtualized-auto-sizer": "1.0.5",
@@ -57,6 +62,10 @@
     "canvas-color-tracker": "file:./canvas-color-tracker"
   },
   "scripts": {
+    "init-submodule": "git submodule update --init --recursive",
+    "setup": "./scripts/setup-hardhat.sh",
+    "seed": "./scripts/seed-db.sh",
+    "generate": "./scripts/generate-zeus.sh",
     "hasura": "hasura --project ./hasura",
     "docker:start": "docker-compose up -d",
     "docker:stop": "docker-compose down",
@@ -120,11 +129,11 @@
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
     "@glazed/types": "0.1.3",
-    "@gqty/cli": "2.3.1",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
     "@types/debug": "4.1.7",
     "@types/ethereumjs-util": "6.1.0",
+    "@types/faker": "^5.5.9",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
     "@types/luxon": "2.0.2",
@@ -133,7 +142,6 @@
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.1.7",
     "@types/react-virtualized-auto-sizer": "1.0.0",
-    "@types/recoilize": "0.8.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
     "@vercel/node": "1.12.1",
