Cleanup for env variables

--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,25 @@
+# Local Docker Setup
+LOCAL_WEB_SERVER=http://localhost:3000
+HASURA_URL=http://localhost:8080/v1/graphql
+DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
+HASURA_ADMIN_SECRET=admin-secret
+
 # Shared Environment
 REACT_APP_INFURA_PROJECT_ID=
-ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/${REACT_APP_INFURA_PROJECT_ID}
-HASURA_ADMIN_SECRET=secret
-
-
+ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/
+REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
+HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
+LOCAL_CIRCLE_ADMIN=0xYOUR_DEV_ADDRESS
 
 
 # Local Environment
-REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
-REACT_APP_API_BASE_URL=http://localhost/api
-
-HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
-DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
-
+REACT_APP_API_BASE_URL=http://localhost:9000/api
 REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
 
-
 # Staging Environment
-REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
-REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
-
-
+#REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
 
 # Production Environment
-REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
-
-
-
-# Hasura vars
-HASURA_ADMIN_SECRET=admin-secret
-# HASURA_GRAPHQL_AUTH_HOOK is Set in docker-compose
-
-REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
-REACT_APP_INFURA_PROJECT_ID=
-
-# production backend
-#REACT_APP_API_BASE_URL=https://coordinape.me/api
-
-# staging backend
-#REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
-
-
-
-
-
-# Used for seed DB script
-LOCAL_WEB_SERVER=http://localhost:3000
-HASURA_URL=http://localhost:8080/v1/graphql
+#REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
