Fix mismatch between postgres url specification

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Local Docker Setup
 LOCAL_WEB_SERVER=http://localhost:3000
 HASURA_URL=http://localhost:8080/v1/graphql
+DATABASE_URL_HASURA=postgres://postgres:postgrespassword@postgres:5432/postgres
 DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 HASURA_ADMIN_SECRET=admin-secret
 
