Clean up and have seed as scripts

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,41 @@
-# Local Docker Setup
-LOCAL_WEB_SERVER=http://localhost:3000
-HASURA_URL=http://localhost:8080/v1/graphql
-DATABASE_URL_HASURA=postgres://postgres:postgrespassword@postgres:5432/postgres
-DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
-HASURA_ADMIN_SECRET=admin-secret
+# FAST_REFRESH=false
 
 # Shared Environment
-REACT_APP_INFURA_PROJECT_ID=
-ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/
-REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
+LOCAL_SEED_ADDRESS=0xYOUR_DEV_ADDRESS
 HARDHAT_OWNER_ADDRESS=0xYOUR_DEV_ADDRESS
-LOCAL_CIRCLE_ADMIN=0xYOUR_DEV_ADDRESS
+REACT_APP_INFURA_PROJECT_ID=infuraidhere
+ETHEREUM_RPC_URL=https://mainnet.infura.io/v3/infuraidhere
 
+# Default local variables
+LOCAL_HASURA_PORT=8080
+LOCAL_POSTGRES_PORT=5432
+LOCAL_VERCEL_PORT=3000
+LOCAL_LARAVEL_PORT=9000
+LOCAL_POSTGRES_USER=postgres
+LOCAL_POSTGRES_PASSWORD=postgrespassword
+LOCAL_POSTGRES_DATABASE=postgres
+LOCAL_HASURA_ADMIN_SECRET=admin-secret
+
+PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
+
+# Hasura CLI
+HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
+HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
 
 # Local Environment
 REACT_APP_API_BASE_URL=http://localhost:9000/api
 REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
+# NODE: Used for the node scripts and vercel serverless functions
+NODE_HASURA_URL=http://localhost:8080/v1/graphql
+NODE_HASURA_ADMIN_SECRET=admin-secret
+
 
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
 #REACT_APP_HASURA_URL=https://coordinape-staging.hasura.app/v1/graphql
 
+
 # Production Environment
 #REACT_APP_API_BASE_URL=https://coordinape.me/api
 #REACT_APP_HASURA_URL=https://coordinape-prod.hasura.app/v1/graphql
+REACT_APP_S3_BASE_URL=https://coordinape.s3.amazonaws.com
