--- a/package.json
+++ b/package.json
@@ -64,9 +64,12 @@
   "scripts": {
     "init-submodule": "git submodule update --init --recursive",
     "setup": "./scripts/setup-hardhat.sh",
-    "seed": "./scripts/seed-db.sh",
+    "db-seed-fresh": "yarn db-clean && yarn db-seed && yarn db-add-me",
+    "db-seed": "node ./scripts/tsrun.mjs ./scripts/db-seed.ts",
+    "db-clean": "node ./scripts/tsrun.mjs ./scripts/db-clean.ts",
+    "db-add-me": "node ./scripts/tsrun.mjs ./scripts/db-add-me.ts",
     "generate": "./scripts/generate-zeus.sh",
-    "hasura": "hasura --project ./hasura",
+    "hasura": "hasura --envfile ../.env --project ./hasura",
     "docker:start": "docker-compose up -d",
     "docker:stop": "docker-compose down",
     "docker:clean": "docker-compose down -v",
@@ -128,6 +131,7 @@
     "@datamodels/identity-accounts-crypto": "0.1.2",
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
+    "@digitak/esrun": "3.1.2",
     "@glazed/types": "0.1.3",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.2",
@@ -148,6 +152,7 @@
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
+    "dotenv-expand": "6.0.1",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
