--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,28 +7,29 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - ${LOCAL_POSTGRES_PORT}:${LOCAL_POSTGRES_PORT}
     environment:
-      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_PASSWORD: ${LOCAL_POSTGRES_PASSWORD}
 
+  # Hasura
   graphql-engine:
     image: hasura/graphql-engine:v2.1.1.cli-migrations-v3
     volumes:
       - ./hasura/migrations:/hasura-migrations
       - ./hasura/metadata:/hasura-metadata
     ports:
-      - '8080:8080'
+      - ${LOCAL_HASURA_PORT}:${LOCAL_HASURA_PORT}
     depends_on:
       - postgres
     restart: always
     environment:
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: ${DATABASE_URL_HASURA}
-      HASURA_GRAPHQL_DATABASE_URL: ${DATABASE_URL_HASURA}
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://${LOCAL_POSTGRES_USER}:${LOCAL_POSTGRES_PASSWORD}@postgres:${LOCAL_POSTGRES_PORT}/${LOCAL_POSTGRES_DATABASE}
+      HASURA_GRAPHQL_DATABASE_URL: postgres://${LOCAL_POSTGRES_USER}:${LOCAL_POSTGRES_PASSWORD}@postgres:${LOCAL_POSTGRES_PORT}/${LOCAL_POSTGRES_DATABASE}
       HASURA_GRAPHQL_ENABLE_CONSOLE: 'true'
       HASURA_GRAPHQL_DEV_MODE: 'true'
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      HASURA_GRAPHQL_ADMIN_SECRET: admin-secret
-      HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:3000/api/hasura/auth
+      HASURA_GRAPHQL_ADMIN_SECRET: ${LOCAL_HASURA_ADMIN_SECRET}
+      HASURA_GRAPHQL_AUTH_HOOK: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/auth
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
 
   app:
@@ -42,10 +43,10 @@ services:
       SERVICE_NAME: app
       DB_CONNECTION: pgsql
       DB_HOST: postgres
-      DB_PORT: '5432'
-      DB_DATABASE: postgres
-      DB_USERNAME: postgres
-      DB_PASSWORD: postgrespassword
+      DB_PORT: ${LOCAL_POSTGRES_PORT}
+      DB_DATABASE: ${LOCAL_POSTGRES_DATABASE}
+      DB_USERNAME: ${LOCAL_POSTGRES_USER}
+      DB_PASSWORD: ${LOCAL_POSTGRES_PASSWORD}
     volumes:
       - ./laravel:/var/www
       - ./laravel/services/php/local.ini:/usr/local/etc/php/conf.d/local.ini
@@ -67,7 +68,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "9000:80"
+      - ${LOCAL_LARAVEL_PORT}:80
       - "443:443"
     volumes:
       - ./laravel:/var/www
