--- a/.env.example
+++ b/.env.example
@@ -16,16 +16,17 @@ LOCAL_HASURA_ADMIN_SECRET=admin-secret
 
 PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 
-# Hasura CLI
+# Hasura CLI (used with ./hasura/config.yaml)
 HASURA_GRAPHQL_ENDPOINT=http://localhost:8080
 HASURA_GRAPHQL_ADMIN_SECRET=admin-secret
+# Same as prisma but replace s/localhost/postgres
+HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 
 # Local Environment
 REACT_APP_API_BASE_URL=http://localhost:9000/api
 REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
 # NODE: Used for the node scripts and vercel serverless functions
 NODE_HASURA_URL=http://localhost:8080/v1/graphql
-NODE_HASURA_ADMIN_SECRET=admin-secret
 
 # Staging Environment
 #REACT_APP_API_BASE_URL=https://staging-api.coordinape.com/api
