Renaming vars to match .env.example and adding missing var

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ LOCAL_POSTGRES_USER=postgres
 LOCAL_POSTGRES_PASSWORD=postgrespassword
 LOCAL_POSTGRES_DATABASE=postgres
 LOCAL_HASURA_ADMIN_SECRET=admin-secret
+LOCAL_HASURA_URL=http://localhost:8080/v1/graphql
 
 PRISMA_DATABASE_URL=postgres://postgres:postgrespassword@localhost:5432/postgres
 
