--- a/package.json
+++ b/package.json
@@ -130,7 +130,6 @@
     "@datamodels/identity-accounts-crypto": "0.1.2",
     "@datamodels/identity-accounts-web": "0.1.2",
     "@datamodels/identity-profile-basic": "0.1.2",
-    "@digitak/esrun": "3.1.2",
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
     "@sentry/webpack-plugin": "1.18.4",
@@ -154,6 +153,7 @@
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.0",
     "dotenv-expand": "6.0.1",
+    "esbuild": "0.12.29",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.5.0",
@@ -161,6 +161,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "execa": "6.0.0",
     "http-browserify": "1.7.0",
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
@@ -172,6 +173,7 @@
     "react-scripts": "5.0.0-next.47",
     "source-map-explorer": "2.5.2",
     "stream-browserify": "3.0.0",
+    "tmp": "0.2.1",
     "ts-auto-mock": "3.5.0",
     "typescript": "4.4.3",
     "util": "0.12.4"
