add check-nominees metadata

--- a/hasura/metadata/cron_triggers.yaml
+++ b/hasura/metadata/cron_triggers.yaml
@@ -1,1 +1,6 @@
-[]
+cron_triggers:
+  - name: check-nominees
+    webhook: http://localhost:3000/api/cron/check-nominee
+    schedule: 1 0 * * *
+    include_in_metadata: true
+    payload: {}
