Update setup w prisma and fetch-shim (#500)
Fix the build instructions, running `prisma generate` is needed to create prisma's node_modules

Also, the global fetch to be included with an import
Having it in the generated files is hard to maintain.

Rename `setup-hardhat.sh` to `setup.sh`

Commits:
* Update setup w prisma and fetch-shim
* Not have the generated code have node-fetch
* rename to setup-hardhat.sh to setup.sh
* Actually generate prisma does init and new changes

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "canvas-color-tracker": "file:./canvas-color-tracker"
   },
   "scripts": {
-    "setup": "./scripts/setup-hardhat.sh",
+    "setup": "./scripts/setup.sh",
     "db-seed-fresh": "yarn db-clean && yarn db-seed && yarn db-add-me",
     "db-seed": "node ./scripts/tsrun.mjs ./scripts/db-seed.ts",
     "db-clean": "node ./scripts/tsrun.mjs ./scripts/db-clean.ts",
