--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ HASURA_EVENT_SECRET=event-secret
 # Same as prisma but replace s/localhost/postgres
 HASURA_GRAPHQL_DATABASE_URL=postgres://postgres:postgrespassword@postgres:5432/postgres
 
+# Social messages
+TELEGRAM_BOT_TOKEN=<your Telegram testing bot token>
+
 # Local Environment
 REACT_APP_API_BASE_URL=http://localhost:9000/api
 REACT_APP_HASURA_URL=http://localhost:8080/v1/graphql
