--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: ${HASURA_GRAPHQL_ADMIN_SECRET}
       HASURA_EVENT_SECRET: ${HASURA_EVENT_SECRET}
       HASURA_GRAPHQL_AUTH_HOOK: http://${DOCKER_GATEWAY_HOST:-host.docker.internal}:${LOCAL_VERCEL_PORT}/api/hasura/auth
+      HASURA_GRAPHQL_CRON_URL: http://host.docker.internal:${LOCAL_VERCEL_PORT}/api/hasura/cron
+      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
       ## HASURA_GRAPHQL_UNAUTHORIZED_ROLE: public
       # Linux (read: non macOS or Windows) users should
       # `export DOCKER_GATEWAY_HOST=172.17.0.1` to interact with the host machine's ports
@@ -76,7 +78,7 @@ services:
       DB_USERNAME: ${LOCAL_POSTGRES_USER}
       DB_PASSWORD: ${LOCAL_POSTGRES_PASSWORD}
       FILESYSTEM_DRIVER: s3
-      AWS_ACCESS_KEY_ID: dontworry      #we have to put some value in here or it tries to use local ec2 metadata auth
+      AWS_ACCESS_KEY_ID: dontworry #we have to put some value in here or it tries to use local ec2 metadata auth
       AWS_SECRET_ACCESS_KEY: thisisfine #we have to put some value in here or it tries to use local ec2 metadata auth
       AWS_ENDPOINT: http://s3.localhost.localstack.cloud:4566
       AWS_DEFAULT_REGION: us-east-1
@@ -105,7 +107,7 @@ services:
     tty: true
     ports:
       - ${LOCAL_LARAVEL_PORT}:80
-      - "443:443"
+      - '443:443'
     volumes:
       - ./laravel:/var/www
       - ./laravel/services/nginx/conf.d/:/etc/nginx/conf.d/
