--- a/package.json
+++ b/package.json
@@ -105,8 +105,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged --allow-empty",
-      "pre-push": "yarn lint:check"
+      "pre-commit": "lint-staged --allow-empty"
     }
   },
   "eslintConfig": {
